4.70

- Added: Civilian east Asian types from CFP and CUP mods, by longtimegamer
- Added: Some fighting vehicles are now available via airdrop if d_with_airdrop == 2 (ammo truck, APC, MRAP), by longtimegamer
- Added: 2.16 overrideHazeQuality is set to VeryLow in description.ext (check https://community.bistudio.com/wiki/Description.ext#overrideHazeQuality )
- Added: Faction for CUP Russian Ground Forces Winter, by longtimegamer
- Added: ION PMC Security Detail as INDFOR unit types, by longtimegamer
- Changed: Added new 2.16 scripting commands and scripting command changes
- Changed: AI group respawn times increased again
- Fixed: d_sum_camps > 0 before spawning target clear, by longtimegamer
- Fixed: Do not show virtual arsenal 3dmarker, flagpole beacon when streaming friendly or server-forced no-HUD, by longtimegamer
- Fixed: Statusbar rank did not show General
- Fixed: Unloaded static weapons created partially underground, by longtimegamer
- Fixed: Do not show airdrop message if streamfriendly is enabled, by longtimegamer
- Fixed: If tower under radio got deleted (for whatever reason) main target mission did not end
- Fixed: If an air taxi was also a vehicle available as bonus vehicle (side mission or main target bonus) player without enough points could not enter it when database is available
- Lots of opimizations (script profiling)