@@ -1,4 +1,6 @@
 STR_DOM_MISSIONSTRING_4_44
+STR_DOM_MISSIONSTRING_246
+STR_DOM_MISSIONSTRING_246_a
 STR_DOM_MISSIONSTRING_358
 STR_DOM_MISSIONSTRING_358V
 STR_DOM_MISSIONSTRING_358A
