@@ -3,6 +3,8 @@ STR_DOM_MISSIONSTRING_11
 STR_DOM_MISSIONSTRING_193
 STR_DOM_MISSIONSTRING_237
 STR_DOM_MISSIONSTRING_239
+STR_DOM_MISSIONSTRING_246
+STR_DOM_MISSIONSTRING_246_a
 STR_DOM_MISSIONSTRING_358
 STR_DOM_MISSIONSTRING_358V
 STR_DOM_MISSIONSTRING_358A
