@@ -5,6 +5,8 @@ STR_DOM_MISSIONSTRING_65
 STR_DOM_MISSIONSTRING_214
 STR_DOM_MISSIONSTRING_237
 STR_DOM_MISSIONSTRING_239
+STR_DOM_MISSIONSTRING_246
+STR_DOM_MISSIONSTRING_246_a
 STR_DOM_MISSIONSTRING_266
 STR_DOM_MISSIONSTRING_358
 STR_DOM_MISSIONSTRING_358V
