@@ -8,6 +8,8 @@ STR_DOM_MISSIONSTRING_200
 STR_DOM_MISSIONSTRING_214
 STR_DOM_MISSIONSTRING_237
 STR_DOM_MISSIONSTRING_239
+STR_DOM_MISSIONSTRING_246
+STR_DOM_MISSIONSTRING_246_a
 STR_DOM_MISSIONSTRING_298
 STR_DOM_MISSIONSTRING_308
 STR_DOM_MISSIONSTRING_358
