@@ -1,4 +1,6 @@
 STR_DOM_MISSIONSTRING_4_44
+STR_DOM_MISSIONSTRING_246
+STR_DOM_MISSIONSTRING_246_a
 STR_DOM_MISSIONSTRING_400_EXTRA
 STR_DOM_MISSIONSTRING_418C_GUERR_DEFENSE_ONLY
 STR_DOM_MISSIONSTRING_ALL
