@@ -3,6 +3,8 @@ STR_DOM_MISSIONSTRING_11
 STR_DOM_MISSIONSTRING_179a
 STR_DOM_MISSIONSTRING_235
 STR_DOM_MISSIONSTRING_239
+STR_DOM_MISSIONSTRING_246
+STR_DOM_MISSIONSTRING_246_a
 STR_DOM_MISSIONSTRING_308
 STR_DOM_MISSIONSTRING_358
 STR_DOM_MISSIONSTRING_358V
