@@ -7,6 +7,7 @@
 - Added: ION PMC Security Detail as INDFOR unit types, by longtimegamer
 - Changed: Added new 2.16 scripting commands and scripting command changes
 - Changed: AI group respawn times increased again
+- Changed: Better messages if farp/mash position is too close to base or slope is too steep
 - Fixed: d_sum_camps > 0 before spawning target clear, by longtimegamer
 - Fixed: Do not show virtual arsenal 3dmarker, flagpole beacon when streaming friendly or server-forced no-HUD, by longtimegamer
 - Fixed: Statusbar rank did not show General
